feat(Backend): Adjust new logic to be compatible with new EDC of BPDM